Finished login form, sign up button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   </head>
   <body>
     <div id='root'></div>
-    <p>Lorem Ipsum, Dolor</p>
+    <form class="sign-in" action="/profile" method="POST"> 
+      <input type="text" name="username" placeholder="User Name">
+      <input type="text" name="password" placeholder="Password">
+      <input type="submit" value="Log In">
+    </form>
+
+    <form class="sign-up" action="/signup" method="POST">
+      <input type="submit" value="Sign Up">
+    </form>
 
     <script src="./build/bundle.js"></script>
   </body>
