--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <input type="submit" value="Log In">
     </form>
 
-    <form class="sign-up" action="/signup" method="POST">
+    <form class="sign-up" action="/signup" method="GET">
       <input type="submit" value="Sign Up">
     </form>
   </body>
