--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <form class="sign-in" action="/profile" method="POST"> 
+    <form class="sign-in" action="/profile" method="POST">
       <input type="text" name="username" placeholder="User Name">
       <input type="text" name="password" placeholder="Password">
       <input type="submit" value="Log In">
@@ -14,5 +14,8 @@
     <form class="sign-up" action="/signup" method="GET">
       <input type="submit" value="Sign Up">
     </form>
+
+    <div id="root"></div>
+    <script src="./build/bundle.js"></script>
   </body>
 </html>
