--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h3 id="loginHeader">Please login to Trivianetix</h3>
   <form class="sign-in" action="/profile" method="POST">
     <input type="text" name="username" placeholder="User Name">
-    <input type="text" name="password" placeholder="Password">
+    <input type="password" name="password" placeholder="Password">
     <input type="submit" value="Log In">
   </form>
   <p id="signUpPTag">First Time? <br> Sign up here!</p>
