--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Trivianetix login page</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Trivianetix login page</title>
-</head>
+  <body>
+    <h3 id="loginHeader">Please login to Trivianetix</h3>
+    <form class="sign-in" action="/profile" method="POST">
+      <input type="text" name="username" placeholder="User Name" />
+      <input type="password" name="password" placeholder="Password" />
+      <input type="submit" value="Log In" />
+    </form>
+    <p id="signUpPTag">
+      First Time? <br />
+      Sign up here!
+    </p>
 
-<body>
-  <h3 id="loginHeader">Please login to Trivianetix</h3>
-  <form class="sign-in" action="/profile" method="POST">
-    <input type="text" name="username" placeholder="User Name">
-    <input type="password" name="password" placeholder="Password">
-    <input type="submit" value="Log In">
-  </form>
-  <p id="signUpPTag">First Time? <br> Sign up here!</p>
+    <form class="sign-up" action="/signup" method="GET">
+      <input type="submit" value="Sign Up" />
+    </form>
 
-  <form class="sign-up" action="/signup" method="GET">
-    <input type="submit" value="Sign Up">
-  </form>
-
-  <div id="root"></div>
-  <script src="./build/bundle.js"></script>
-</body>
-
+    <div id="root"></div>
+    <script src="./build/bundle.js"></script>
+  </body>
 </html>
