signup form now sends education and state data

--- a/client/signup.html
+++ b/client/signup.html
@@ -15,7 +15,7 @@
         <label>Password: </label>
         <input type="password" name="password" placeholder="password"><br>
         <label>State: </label>
-        <select >
+        <select name="state">
             <option value="" hidden disabled selected>Select your state</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -72,7 +72,7 @@
         </select > <br>
 
         <label>Education: </label>
-        <select>
+        <select name="education">
             <option value="" hidden disabled selected>Select highest level of education</option>
             <option value="No formal education">Current K-12 Student</option>
             <option value="GED">GED</option>
