--- a/client/signup.html
+++ b/client/signup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <label>Password: </label>
         <input type="password" name="password" placeholder="password"><br>
         <label>State: </label>
-        <select >
+        <select>
             <option value="" hidden disabled selected>Select your state</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -69,7 +70,7 @@
             <option value="WI">Wisconsin</option>
             <option value="WY">Wyoming</option>
             <option value="WY">Non US Resident</option>
-        </select > <br>
+        </select> <br>
 
         <label>Education: </label>
         <select>
@@ -82,8 +83,8 @@
             <option value="Doctorate or higher">Doctorate or higher</option>
         </select> <br>
         <label>Age: </label>
-        <input type="text" name="age" placeholder="Ex: 21"/><br>
-        <input type="submit" value="Sign Up"/>
+        <input type="text" name="age" placeholder="Ex: 21" /><br>
+        <input type="submit" value="Sign Up" />
     </form>
 </body>
 
