fixed sign up button

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     </p>
   </form>
 
-  <p id="signUpPTag">First Time? <br> Sign up here!</p>
+  <p id="first-time">First Time?</p>
 
   <form class="sign-up" action="/signup" method="GET">
-    <input id='sign-up-button' type="submit" value="Sign Up">
+    <input id='sign-up-button' type="submit" value="Sign Up Here!">
   </form>
-  
+
 </body>
 
 </html>
