--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Trivianetix login page</title>
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./index.css">
   <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 
