start of profile styling

--- a/client/profile.html
+++ b/client/profile.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="./build/bundle.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Trivianetix</title>
+  <link rel="stylesheet" href="/profile/profile.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="./build/bundle.js"></script>
+</body>
+
 </html>
