--- a/client/signup.html
+++ b/client/signup.html
@@ -8,16 +8,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="/signup/signup.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <form class="sign-up-form" action="/signup" method="POST">
         <h1>Sign Up</h1>
-        <input class="txtbx" type="text" name="username" placeholder="Username"><br>
+        <input class="txtbx" type="text" name="username" placeholder="Enter a username..."><br>
         <label></label>
-        <input class="txtbx" type="password" name="password" placeholder="Password"><br>
+        <input class="txtbx" id="entrybox" type="password" name="password" placeholder="Create a password..."><br>
         <label></label>
-        <select class="txtbx" name="state">
+        <select id="entrybox" class="txtbx" name="state">
             <option value="" hidden disabled selected>Select your state</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -74,7 +75,7 @@
         </select> <br>
 
         <label></label>
-        <select class="txtbx" name="education">
+        <select id="entrybox" class="txtbx" name="education">
             <option value="" hidden disabled selected>Select highest level of education</option>
             <option value="No formal education">Current K-12 Student</option>
             <option value="GED">GED</option>
@@ -84,8 +85,8 @@
             <option value="Doctorate or higher">Doctorate or higher</option>
         </select> <br>
         <label></label>
-        <input class="txtbx" type="text" name="age" placeholder="Age" /><br>
-        <input class="signup-btn" type="submit" value="Sign Up" />
+        <input class="txtbx" type="text" name="age" placeholder="Enter your age..." /><br>
+        <input class="signup-btn" id="signupbutton" type="submit" value="Sign Up!" />
     </form>
 </body>
 
