--- a/client/signup.html
+++ b/client/signup.html
@@ -14,11 +14,11 @@
 <body>
     <form class="sign-up-form" action="/signup" method="POST">
         <h1>Sign Up</h1>
-        <input class="txtbx" type="text" name="username" placeholder="Enter a username..."><br>
+        <input class="txtbx" type="text" name="username" placeholder="Enter a username..." required><br>
         <label></label>
-        <input class="txtbx" id="entrybox" type="password" name="password" placeholder="Create a password..."><br>
+        <input class="txtbx" id="entrybox" type="password" name="password" placeholder="Create a password..." required><br>
         <label></label>
-        <select id="entrybox" class="txtbx" name="state">
+        <select id="entrybox" class="txtbx" name="state" required>
             <option value="" hidden disabled selected>Select your state</option>
             <option value="AL">Alabama</option>
             <option value="AK">Alaska</option>
@@ -75,7 +75,7 @@
         </select> <br>
 
         <label></label>
-        <select id="entrybox" class="txtbx" name="education">
+        <select id="entrybox" class="txtbx" name="education" required>
             <option value="" hidden disabled selected>Select highest level of education</option>
             <option value="No formal education">Current K-12 Student</option>
             <option value="GED">GED</option>
@@ -85,7 +85,7 @@
             <option value="Doctorate or higher">Doctorate or higher</option>
         </select> <br>
         <label></label>
-        <input class="txtbx" type="text" name="age" placeholder="Enter your age..." /><br>
+        <input class="txtbx" type="text" name="age" placeholder="Enter your age..." required/><br>
         <input class="signup-btn" id="signupbutton" type="submit" value="Sign Up!" />
     </form>
 </body>
