--- a/client/profile.html
+++ b/client/profile.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>Trivianetix</title>
   <link rel="stylesheet" href="/profile/profile.css">
-  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/dark.min.css">
 </head>
 
 <body>
