changes to styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <p id="first-time">First Time?</p>
 
   <form class="sign-up" action="/signup" method="GET">
+    <div className='card' type="submit" value="Sign Up Here!"></div>
     <input id='sign-up-button' type="submit" value="Sign Up Here!">
   </form>
 
